
- Bug fixes:

  * Fix reported installed size change when installing/deinstalling packages
    which are bigger than 2 GiB (int type size 32 bits).  Thanks Benny Baumann
    and Jason Rhinelander for the report and info, and Sven Joachim for the
    patch.  (Closes: #759769)

- Internal changes:

  * Use automake option subdir-objects to be able to use current
    automake versions.

  * Remove forward declaration of STL templated classes and containers
    (basic_string, pair, vector...), use regular includes instead.  Due to
    internal changes of GCC-5 or libsdtc++ related with C++11 compatibility
    (std::string and std::list had to change), the code failed to compile, and
    there is not enough justification to "forward-include" in this case (it has
    to be done copying declarations by hand, it's prone to errors when things
    are updated in the backstage and not very elegant).

  * Changes to allow to compile with C++11 compatibilty mode (prompted by
    changes in the toolchain in Debian):

    * Convert all instances of boost::make_shared and boost::shared_ptr to be
      explicitly prefixed by boost::, otherwise they clash with the new C++11
      std::shared_ptr.

    * Convert some instances of boost::shared_ptr and boost::make_shared to the
      corresponding versions now in the standard library.  The reason for this
      is that it failed to compile straight away with the version in unstable
      (boost-1.55) in some sections of the code (e.g. problemresolver, sqlite,
      file_cache), and because since it is now part of the standard, there is
      little reason to use Boost for that.  The rest of cases not covered in
      this version shall be converted later on.

    * Several other minor changes to allow to compile with C++11.

  * Remove duplicated method in sqlite.* files (below).  There is another method
    with the same signature but with "const std::string&", and "const char*"