@@ -270,6 +270,12 @@ AC_SUBST(BOOST_UNIT_TEST_LIBS)
 
 ##### End Boost.Test check #####
 
+##### Copy gmock inside source #####
+dnl Needed after automake was set to 'subdir-objects' after 1.14
+AC_CONFIG_LINKS([tests/gtest-all.cc:/usr/src/gtest/src/gtest-all.cc])
+AC_CONFIG_LINKS([tests/gmock-all.cc:/usr/src/gmock/src/gmock-all.cc])
+
+
 ##### Check for Google Mock #####
 
 dnl Google Mock's developers do not support prebuilt libraries (e.g.,
